@@ -1,3 +1,14 @@
+2008-01-13  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* DisposableFieldsShouldBeDisposedRule.cs: Add check for static 
+	fields.
+	* DisposableTypesShouldHaveFinalizerRule.cs: Add check for static 
+	fields.
+	* TypesWithDisposableFieldsShouldBeDisposableRule.cs: Add checks 
+	for structs and static fields.
+	* TypesWithNativeFieldsShouldBeDisposableRule.cs: Add checks 
+	for structs and static fields.
+
 2008-01-12  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* DisposableFieldsShouldBeDisposedRule.cs: New. Rule that check that
